--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <input name="Username" class="regtext" type="text" placeholder="Username" /><br /><br/>
                         <input name="Password" class="regtext" type="password" placeholder="Password" /><br /><br/>
                         <input name="ConfirmPassword" class="regtext" type="password" placeholder="Confirm Password" /><br /><br/>
-                        <input type="checkbox" value="Remember me">I accept Terms & Conditions</input><br /><br />
+                        <input type="checkbox">I accept Terms & Conditions</input><br /><br />
                         <input class="regbutton" type="submit" value="Register" />
                         <input class="regbutton" type="reset" value="Reset" />
                     </form>
